# loka_light

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFESTO.md  README.md  __init__.py  loka_ytp.py  pyproject.toml  review_loka_light_en.md  sigma_noise.py  witnesses.py
applications/: __init__.py  scenarios.py
cognition/: __init__.py  base.py  models.py
core/: __init__.py  algebras.py  factory.py  loka.py  polarity.py  value.py
devices/: __init__.py  base.py  coding.py  communication.py  components.py  detectors.py  media.py  passport.py  pseudomultipolar.py  sigma_guard.py  sources.py
physics/: __init__.py  composition.py  multipolar_cascade.py  multipolar_fields.py  multipolar_quantum.py  multipolar_relativity.py  multipolar_wave.py  pseudomultipolar_timeseries.py  sigma.py  translation_gap.py
runs/electrolyser_stage/: properties.json
runs/object_polarity_scan/: responses.npy  summary.json
runs/polarization_field/: fraction_a.json  fraction_b.json
runs/property_transfer/: messages.json
runs/pseudo_mnx_chain/: trace.json
runs/pseudo_quantum_hadamard/: summary.json
runs/secure_transmission/: result.json
runs/structuring_field/: properties.json
runs/test_pseudo_mnx/: trace.json
simulation/: __init__.py  engine.py
simulation/multipolar_pseudo_quantum/: __init__.py  circuit.py  examples.py  gates.py  metrics.py  viz.py
tests/: conftest.py  test_pseudomultipolar_timeseries.py  test_theory_alignment.py  test_translation_gap.py  test_witness_pack.py
